--- a/deployments/kube/beta.yml
+++ b/deployments/kube/beta.yml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    type: beta-$SERVICE_NAME
+    type: beta-$ServiceName
     version: primary
-  name: beta-$SERVICE_NAME-config
-  namespace: $NAMESPACE
+  name: beta-$ServiceName-config
+  namespace: $Namespace
 data:
   app_port: ':8080'
-  app_name: beta-$SERVICE_NAME
+  app_name: beta-$ServiceName
   app_version: 1.0.0
-  application: beta-$SERVICE_NAME
-  dd_service_name: beta-$SERVICE_NAME
+  application: beta-$ServiceName
+  dd_service_name: beta-$ServiceName
   service_name: beta-&SERVICE_NAME
   aws_region: ap-south-1
 ---
@@ -20,46 +20,46 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    type: beta-$SERVICE_NAME
+    type: beta-$ServiceName
     version: primary
-  name: beta-$SERVICE_NAME
-  namespace: $NAMESPACE
+  name: beta-$ServiceName
+  namespace: $Namespace
 spec:
   replicas: 1
   selector:
     matchLabels:
-      type: beta-$SERVICE_NAME
+      type: beta-$ServiceName
   template:
     metadata:
       labels:
-        type: beta-$SERVICE_NAME
+        type: beta-$ServiceName
         version: primary
     spec:
-      serviceAccountName: beta-$SERVICE_NAME-sa
+      serviceAccountName: beta-$ServiceName-sa
       containers:
-        - name: beta-$SERVICE_NAME-http-server
-          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/$SERVICE_NAME:$IMGTAGHTTPSERVER
+        - name: beta-$ServiceName-http-server
+          image: 287726214764.dkr.ecr.ap-south-1.amazonaws.com/niyox2/$ServiceName:$IMGTAGHTTPSERVER
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
           envFrom:
             - configMapRef:
-                name: beta-$SERVICE_NAME-config
+                name: beta-$ServiceName-config
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: beta-$SERVICE_NAME
-  namespace: $NAMESPACE
+  name: beta-$ServiceName
+  namespace: $Namespace
 spec:
   ports:
-    - name: http-beta-$SERVICE_NAME
+    - name: http-beta-$ServiceName
       port: 8080
       targetPort: 8080
       protocol: TCP
   selector:
-    type: beta-$SERVICE_NAME
+    type: beta-$ServiceName
   type: ClusterIP
 
 ---
