Changed fs and improved names and configs

--- a/.kube/deployment/beta-deployment.yml
+++ b/.kube/deployment/beta-deployment.yml
@@ -3,31 +3,31 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    type: dev-$ServiceName
+    type: beta-$ServiceName
     version: primary
-  name: dev-$ServiceName
+  name: beta-$ServiceName
   namespace: $Namespace
 spec:
   selector:
     matchLabels:
-      type: dev-$ServiceName
+      type: beta-$ServiceName
   template:
     metadata:
       labels:
-        type: dev-$ServiceName
+        type: beta-$ServiceName
         version: primary
     spec:
-      serviceAccountName: dev-$ServiceName-sa
+      serviceAccountName: beta-$ServiceName-sa
       containers:
-        - name: dev-$ServiceName
+        - name: beta-$ServiceName
           env:
             - name: NODE_ENV
-              value: dev
+              value: beta
             - name: APP_NAME
               value: $ServiceName
             - name: LOG_LEVEL
               value: debug
-          image: <ECR_REPO_NAME>
+          image: <AWS_ECR_REPOSITORY>
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
@@ -55,14 +55,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dev-$ServiceName
+  name: beta-$ServiceName
   namespace: $Namespace
 spec:
   ports:
-    - name: dev-$ServiceName
+    - name: beta-$ServiceName
       port: 3000
       targetPort: 3000
       protocol: TCP
   selector:
-    type: dev-$ServiceName
+    type: beta-$ServiceName
   type: ClusterIP
