--- a/.kube/deployment/uat-deployment.yml
+++ b/.kube/deployment/uat-deployment.yml
@@ -3,31 +3,31 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    type: prod-$ServiceName
+    type: uat-$ServiceName
     version: primary
-  name: prod-$ServiceName
+  name: uat-$ServiceName
   namespace: $Namespace
 spec:
   selector:
     matchLabels:
-      type: prod-$ServiceName
+      type: uat-$ServiceName
   template:
     metadata:
       labels:
-        type: prod-$ServiceName
+        type: uat-$ServiceName
         version: primary
     spec:
-      serviceAccountName: prod-$ServiceName-sa
+      serviceAccountName: uat-$ServiceName-sa
       containers:
-        - name: prod-$ServiceName
+        - name: uat-$ServiceName
           env:
             - name: NODE_ENV
-              value: prod
+              value: uat
             - name: APP_NAME
               value: $ServiceName
             - name: LOG_LEVEL
               value: debug
-          image: <ECR_REPO_NAME>
+          image: <AWS_ECR_REPOSITORY>
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
@@ -55,14 +55,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: prod-$ServiceName
+  name: uat-$ServiceName
   namespace: $Namespace
 spec:
   ports:
-    - name: prod-$ServiceName
+    - name: uat-$ServiceName
       port: 3000
       targetPort: 3000
       protocol: TCP
   selector:
-    type: prod-$ServiceName
+    type: uat-$ServiceName
   type: ClusterIP
